# kaizen

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REPOS.md  CONTRIBUTING.md  Cargo.toml  EXPLORATION_CODEBASE.md  EXPLORATION_INDEX.md  GITHUB_PROJECT_TASKS.md  MIGRATION_GUIDE.md  POINTS_EXTENSION_ET_MONETISATION.md  PRD_SUBSCRIPTION_SYSTEM.md  QUICK_START_AJOUTER_REGLE.md  README.md  SYNTHESE_EXPLORATION.md  TLDR.md  action.yml  clippy.toml  index.html  install-review.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  release.yml  test-action.yml
crates/kaizen-cli/: Cargo.toml
crates/kaizen-cli/locales/: en.yml  fr.yml
crates/kaizen-cli/src/: i18n.rs  license.rs  main.rs
crates/kaizen-cli/src/commands/: auth.rs  check.rs  explain.rs  init.rs  mod.rs
crates/kaizen-cli/src/output/: json.rs  mod.rs  pretty.rs  sarif.rs
crates/kaizen-core/: Cargo.toml
crates/kaizen-core/benches/: benchmarks.rs
crates/kaizen-core/src/: analysis.rs  config.rs  diagnostic.rs  disable_comments.rs  lib.rs  licensing.rs  parser.rs
crates/kaizen-core/src/rules/: helpers.rs  mod.rs
crates/kaizen-core/src/rules/quality/: eqeqeq.rs  max_complexity.rs  no_console.rs  no_eval.rs  no_unreachable.rs  no_unused_imports.rs  no_unused_vars.rs  prefer_nullish_coalescing.rs  prefer_optional_chaining.rs  prefer_using.rs
crates/kaizen-core/src/rules/security/: command_injection.rs  eval_injection.rs  hardcoded_secrets.rs  insecure_random.rs  mod.rs  prototype_pollution.rs  redos.rs  unsafe_deserialization.rs  xss.rs
crates/kaizen-core/src/semantic/: cfg.rs  symbols.rs  visitor.rs
crates/kaizen-core/src/taint/: dfg.rs  mod.rs  sanitizers.rs  sinks.rs  sources.rs
crates/kaizen-core/src/visitor/: context.rs  mod.rs  traits.rs
crates/kaizen-core/tests/: disposable_types_tests.rs  fixture_tests.rs  semantic_tests.rs
crates/kaizen-core/tests/snapshots/: fixture_tests__snapshots__ast_snapshot_simple_function.snap  fixture_tests__snapshots__ast_snapshot_typescript_interfaces.snap  semantic_tests__classes__classes_fixture_snapshot.snap  semantic_tests__closures__closures_fixture_snapshot.snap  semantic_tests__edge_cases__edge_cases_fixture_snapshot.snap  semantic_tests__modules__modules_fixture_snapshot.snap  semantic_tests__typescript__typescript_interfaces_fixture_snapshot.snap
crates/kaizen-lsp/: Cargo.toml
crates/kaizen-lsp/src/: analysis.rs  capabilities.rs  cli.rs  code_actions.rs  debouncer.rs  diagnostics.rs  document.rs  logging.rs  main.rs  server.rs
crates/lynx-cli/: Cargo.toml
crates/lynx-cli/src/: main.rs
crates/lynx-cli/src/commands/: check.rs  explain.rs  init.rs  mod.rs
crates/lynx-cli/src/output/: json.rs  mod.rs  pretty.rs  sarif.rs
crates/lynx-core/: Cargo.toml
crates/lynx-core/benches/: benchmarks.rs
crates/lynx-core/src/: analysis.rs  config.rs  diagnostic.rs  disable_comments.rs  lib.rs  parser.rs
crates/lynx-core/src/rules/: mod.rs
crates/lynx-core/src/rules/quality/: eqeqeq.rs  floating_promises.rs  max_complexity.rs  max_depth.rs  mod.rs  no_console.rs  no_eval.rs  no_unused_imports.rs  no_unused_vars.rs  no_var.rs  prefer_const.rs  prefer_nullish_coalescing.rs  prefer_optional_chaining.rs  prefer_using.rs
crates/lynx-core/src/rules/security/: hardcoded_secrets.rs  mod.rs  sql_injection.rs  weak_hashing.rs
crates/lynx-core/src/semantic/: cfg.rs  mod.rs  scope.rs  symbols.rs  types.rs  visitor.rs
crates/lynx-core/src/taint/: dfg.rs  mod.rs  propagation.rs  sanitizers.rs  sinks.rs  sources.rs
crates/lynx-core/src/visitor/: mod.rs  traits.rs
crates/lynx-core/tests/: disposable_types_tests.rs  fixture_tests.rs  semantic_tests.rs
crates/lynx-core/tests/snapshots/: semantic_tests__classes__classes_fixture_snapshot.snap  semantic_tests__closures__closures_fixture_snapshot.snap  semantic_tests__modules__modules_fixture_snapshot.snap
crates/lynx-lsp/: Cargo.toml
crates/lynx-lsp/src/: analysis.rs  capabilities.rs  cli.rs  code_actions.rs  debouncer.rs  diagnostics.rs  document.rs  handlers.rs  logging.rs  main.rs  server.rs
dev/bench/: data.js
docs/rules/: README.md
docs/rules/quality/: eqeqeq.md  max-complexity.md  max-depth.md  no-console.md  no-eval.md  no-floating-promises.md  no-unreachable.md  no-unused-imports.md  no-unused-vars.md  no-var.md  prefer-const.md  prefer-nullish-coalescing.md  prefer-optional-chaining.md  prefer-using.md
docs/rules/security/: no-command-injection.md  no-eval-injection.md  no-hardcoded-secrets.md  no-insecure-random.md  no-sql-injection.md  no-weak-hashing.md  no-xss.md
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/kaizen-cli/: README.md  install.js  package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: create-github-issues.sh  install-local.sh  review-pr.sh  setup-hooks.sh
scripts/hooks/: pre-push
tests/fixtures/: README.md
tests/fixtures/javascript/: commonjs.cjs  esm.mjs  jsx-component.jsx  simple.js
tests/fixtures/quality/: no-var.mts  unused-vars.mts
tests/fixtures/security/: hardcoded-secret.mts  sql-injection.mts
tests/fixtures/semantic/: classes.mts  closures.mts  edge-cases.mts  modules.mts
tests/fixtures/typescript/: interfaces.ts  simple.ts  tsx-component.tsx
tests/fixtures/valid/: simple.mts
