[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Matvei Piton <mpiton@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/mpiton/lynx"
description = "Ultra-fast JavaScript/TypeScript static analyzer written in Rust"

[workspace.dependencies]
