[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Matvei Piton <mpiton@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/kzn-tools/kaizen"
description = "Ultra-fast JavaScript/TypeScript static analyzer written in Rust"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
