[package]
name = "kaizen-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Kaizen"

[dependencies]
kaizen-core = { path = "../kaizen-core" }
tower-lsp = "0.20"
tokio = { version = "1.48", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6"
dirs = "5"
parking_lot = "0.12"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
