[package]
name = "lynx-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Lynx"

[dependencies]
lynx-core = { path = "../lynx-core" }
tower-lsp = "0.20"
tokio = { version = "1.48", features = ["full"] }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
