[package]
name = "lynx-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Lynx"

[dependencies]
lynx-core = { path = "../lynx-core" }
tower-lsp = "0.20"
tokio = { version = "1.48", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
